--- a/react-netflix-frontend/src/index.scss
+++ b/react-netflix-frontend/src/index.scss
@@ -1,21 +1,21 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,400;0,500;0,700;0,900;1,400&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,400;0,500;0,700;0,900;1,400&display=swap");
 
-
-*{
-  font-family: 'Poppins', sans-serif;
-  transition: all 0.5s;
+* {
+  font-family: "Poppins", sans-serif;
+ 
 }
 
-
 body,
-p,span,
+p,
+span,
 h1,
 h2,
 h3,
 h4,
 h5,
 h6,
-em,a,
+em,
+a,
 ol,
 ul,
 li,
@@ -48,7 +48,7 @@ blockquote {
   font-size: inherit;
   text-align: inherit;
   line-height: inherit;
-  font-family: 'Poppins', sans-serif;
+  font-family: "Poppins", sans-serif;
 }
 input,
 select,
@@ -56,11 +56,10 @@ textarea {
   margin: 0;
 }
 
-a{
+a {
   transition: var(--transition);
   text-decoration: none;
   color: rgb(24, 84, 226);
-  
 }
 b,
 strong {
@@ -78,7 +77,7 @@ ins {
 del {
   opacity: 0.5;
 }
-a{
+a {
   color: white;
 }
 sup,
@@ -105,49 +104,72 @@ mark {
 }
 body {
   margin: 0;
-  font-family: 'Poppins', sans-serif;
+  font-family: "Poppins", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
-html{
+html {
+  /* width */
+  &::-webkit-scrollbar {
+    width: 5px !important;
+  }
 
- /* width */
- &::-webkit-scrollbar {
-  width: 5px;
-}
+  /* Track */
+  &::-webkit-scrollbar-track {
+    box-shadow: inset 0 0 5px grey !important;
+    border-radius: 10px !important;
+  }
 
-/* Track */
-&::-webkit-scrollbar-track {
-  box-shadow: inset 0 0 5px grey; 
-  border-radius: 10px;
-}
- 
-/* Handle */
-&::-webkit-scrollbar-thumb {
-  background: rgb(146, 146, 146); 
-  border-radius: 10px;
-}
+  /* Handle */
+  &::-webkit-scrollbar-thumb {
+    background: rgb(146, 146, 146) !important;
+    border-radius: 10px !important;
+  }
 
-/* Handle on hover */
-&::-webkit-scrollbar-thumb:hover {
-  background: #b30000; 
+  /* Handle on hover */
+  &::-webkit-scrollbar-thumb:hover {
+    background: #b30000 !important;
+  }
+  overflow-x: hidden;
 }
-overflow-x: hidden;
-}
+body{
+  // &::-webkit-scrollbar {
+  //   width: 5px !important;
+  // }
 
+  // /* Track */
+  // &::-webkit-scrollbar-track {
+  //   box-shadow: inset 0 0 5px grey !important;
+  //   border-radius: 10px !important;
+  // }
+
+  // /* Handle */
+  // &::-webkit-scrollbar-thumb {
+  //   background: rgb(146, 146, 146) !important;
+  //   border-radius: 10px !important;
+  // }
+
+  // /* Handle on hover */
+  // &::-webkit-scrollbar-thumb:hover {
+  //   background: #b30000 !important;
+  // }
+}
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
 
+body{
+  padding-right: 0 !important;
+}
 .btn {
   /* position: absolute; */
 
   background-color: #efefef;
   color: rgb(37, 37, 37);
   cursor: pointer;
-  padding: 5px 20px ;
+  padding: 5px 20px;
   border-radius: 5px;
   border: 0.5px solid gray;
   /* //padding:15px; */
@@ -185,4 +207,8 @@ ul {
 
 .collum {
   flex: 1;
+}
+
+:root {
+  --maincolor: #0b0b0b;
 }
