--- a/react-netflix-frontend/src/global/Topbar/topbar.scss
+++ b/react-netflix-frontend/src/global/Topbar/topbar.scss
@@ -1,7 +1,8 @@
 .topbar {
   color: white;
   font-size: 14px;
-  position: sticky;
+  width: 100%;
+  position: fixed;
   z-index: 999;
   top: 0;
   padding: 10px 0;
