--- a/react-netflix-frontend/src/pages/homePage/home.scss
+++ b/react-netflix-frontend/src/pages/homePage/home.scss
@@ -3,5 +3,5 @@
     width: 100%;
     background-size: cover;
     height: 100%;
-    background-image: url('../../../public/assets/images/IN-en-20230306-popsignuptwoweeks-perspective_alpha_website_large.jpg');
+   // background-image: url('../../../public/assets/images/IN-en-20230306-popsignuptwoweeks-perspective_alpha_website_large.jpg');
 }
