--- a/react-netflix-frontend/src/components/movieList/ListItem/styles.scss
+++ b/react-netflix-frontend/src/components/movieList/ListItem/styles.scss
@@ -1,15 +1,21 @@
 .Listitem {
   width: 225px;
-  height: 200px;
+  height: 180px;
   background-color: #141414;
   display: flex;
+  overflow: hidden;
   flex-direction: column;
   align-items: flex-start;
-  z-index: 1;
+  z-index: 0;
+
   border-radius: 8px;
   // overflow: hidden;
-
+.contentBlock{
+  // transform: translateY(0) translateX(-50%);
+  // transition-delay: 0.75s;
+}
   .content {
+   
     width: 100%;
     border-radius: 8px;
     background-color: #141414;
@@ -20,10 +26,10 @@
         border-radius: 8px 8px 0 0;
         width: 100%;
         object-fit: cover;
-        height: 150px;
+        height: 180px;
       }
-      .imageOverlay{
-       // margin: 0 10px;
+      .imageOverlay {
+        // margin: 0 10px;
         color: white;
         display: flex;
         align-items: center;
@@ -37,22 +43,25 @@
           width: 30px;
           height: 30px;
         }
-
       }
     }
   }
   &:hover {
-    // transform: scale(1.5);
-    width: 360px;
-    height: 320px;
-    z-index: 9;
-    .contentWrapper {
-       
-        img {
-        
-          height: 200px;
-        }
-      }
+  //  transition: all 5s ease-in;
+    // position: absolute;
+    // display: inline-block;
+    // top: 0;
+    // transform: scale(2);
+   
+    // z-index: 101;
+    // width: 360px;
+    // height: 320px;
+    // .itemInfo {
+    //   transform: scale(0);
+    // }
+    // .content {
+    //   transform: scale(0);
+    // }
   }
 }
 
