--- a/react-netflix-frontend/src/components/movieList/ListItem/MovieListItem/styles.scss
+++ b/react-netflix-frontend/src/components/movieList/ListItem/MovieListItem/styles.scss
@@ -16,6 +16,7 @@
   video {
     width: 100%;
     height: 140px;
+    display: none;
     object-fit: cover;
     position: absolute;
     top: 0;
@@ -30,6 +31,12 @@
     -webkit-box-shadow: 0px 0px 15px 0px rgba(255, 255, 255, 0.07);
     box-shadow: 0px 0px 15px 0px rgba(255, 255, 255, 0.07);
     border-radius: 5px;
+    video {
+     // width: 100%;
+      display: block;
+     // position: absolute;
+     
+    }
   //  transition-delay: 1s;
 
     img {
@@ -44,7 +51,12 @@
       .icons {
         display: flex;
         margin-bottom: 10px;
-        z-index: 999;
+      //  z-index: 999;
+
+      .MuiIconButton-root{
+        z-index: 10;
+     //  pointer-events: none;
+      }
 
         .icon {
           border: 2px solid white;
