--- a/react-netflix-frontend/src/global/Modal/modal.scss
+++ b/react-netflix-frontend/src/global/Modal/modal.scss
@@ -1,14 +1,16 @@
 .modal-overlay {
     position: fixed;
+    transition: all 1s;
     width: 100%;
     height: 100%;
     display: none;
     top: 0;
     left: 0;
     right: 0;
+    overflow-y: auto;
     bottom: 0;
     background-color: rgba(0, 0, 0, 0.884);
-    z-index: 2;
+    z-index: 9999;
    
 
     .modal-overlay-Wrapper {
@@ -18,6 +20,7 @@
         max-height: 80vh;
             max-width: 75%;
         left: 50%;
+      
         font-size: 50px;
         color: white;
         transform: translate(-50%, -50%);
@@ -45,7 +48,7 @@
             .modalClose {
                 position: absolute;
                 right: -10%;
-                top: -5%;
+                top:0%;
                 // width: 100%;
                 display: flex;
                 flex-direction: column;
