--- a/react-netflix-frontend/src/index.scss
+++ b/react-netflix-frontend/src/index.scss
@@ -2,6 +2,7 @@
 
 * {
   font-family: "Poppins", sans-serif;
+  // transition: all 1s;
  
 }
 
@@ -203,6 +204,9 @@ ul {
   width: 100vw;
   gap: 20px;
   margin: auto;
+}
+span{
+  color: inherit !important;
 }
 
 .collum {
