--- a/react-netflix-frontend/src/app.scss
+++ b/react-netflix-frontend/src/app.scss
@@ -1,10 +1,7 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.movieInfo{
+  .modalClose{
+    display: none !important;
+  }
 }
 
 @media (prefers-reduced-motion: no-preference) {
