--- a/react-netflix-frontend/src/components/movieList/styles.scss
+++ b/react-netflix-frontend/src/components/movieList/styles.scss
@@ -3,19 +3,21 @@
   //   align-items: flex-start;
   //   flex-direction: column;
   //   gap: 10px;
-  margin: 10px 0;
+  margin: 20px 0;
   width: 100%;
   .listTitle {
     color: white !important;
     font-size: 20px;
     font-weight: 500;
     margin-left: 50px !important;
+    //margin-bottom: 20px;
     
    // margin-bottom: 20px;
   }
   .listWrapper {
     position: relative;
     margin: 10px 0;
+    margin-top: 20px;
     .items {
       margin-left: 50px;
       display: flex;
