--- a/react-netflix-frontend/src/components/Details/style.scss
+++ b/react-netflix-frontend/src/components/Details/style.scss
@@ -175,19 +175,19 @@
   }
   .video {
     .VideoContent {
-      background-color: black;
+      background-color: rgba(0, 0, 0, 0.445);
       .content {
         position: relative;
         background: linear-gradient(
           to bottom,
-          rgba(0, 0, 0, 0) 0%,
+          rgba(255, 255, 255, 0.537) 0%,
           rgb(0, 0, 0) 100%
         );
         img {
           height: 510px;
           object-fit: cover;
           // background-color: #181818;
-          opacity: 0.7;
+          opacity: 0.5;
           width: 100%;
           //  opacity: 1;
         }
