--- a/react-netflix-frontend/src/components/Details/style.scss
+++ b/react-netflix-frontend/src/components/Details/style.scss
@@ -7,6 +7,7 @@
     width: 100%;
     font-weight: bold;
     font-size: 20px;
+    //width: 200px;
   }
   .elements {
     display: flex;
@@ -108,6 +109,7 @@
   align-items: flex-start;
   flex-direction: column;
   gap: 20px;
+  padding-bottom: 20px;
 
   .age,
   .quality {
@@ -144,7 +146,7 @@
       .cast,
       .genres {
         display: flex;
-        align-items: center;
+        align-items: flex-start;
         gap: 5px;
         span {
           color: #7c7c7c !important;
@@ -263,6 +265,7 @@
 
 .Aboutmovie {
   .title {
+    font-size: 28px;
   }
   .contentDetails {
     .director {
@@ -273,7 +276,7 @@
     .exciting,
     .director {
       display: flex;
-      align-items: center;
+      align-items: flex-start;
       gap: 5px;
       span {
         color: #7c7c7c !important;
@@ -302,11 +305,7 @@
   bottom: 0;
   gap: 20px;
   .left {
-    background: linear-gradient(
-      to bottom,
-      rgba(0, 0, 0, 0) 0%,
-      rgb(0, 0, 0) 100%
-    );
+  
     flex: 2.5;
     display: flex;
     align-items: flex-start;
@@ -333,10 +332,10 @@
     .cast,
     .genres {
       display: flex;
-      align-items: center;
+      align-items: flex-start;
       gap: 5px;
       span {
-        color: #7c7c7c !important;
+        color: #b9b9b9 !important;
       }
       ul {
         display: flex;
@@ -352,5 +351,12 @@
     //     gap: 5px;
     //   }
     // }
+  }
+}
+
+.movieInfo{
+  .modalClose{display: none;}
+  .modalConten{
+    background: #000;
   }
 }
