--- a/react-netflix-frontend/src/components/featured/style.scss
+++ b/react-netflix-frontend/src/components/featured/style.scss
@@ -2,6 +2,12 @@
 
 .Featured{
     height: 90vh;
+    background-color:#fff ;
+    background: linear-gradient(
+        to bottom,
+        rgba(0, 0, 0, 0.05) 0%,
+        rgb(0, 0, 0) 100%
+      );
 
     .category {
         position: absolute;
@@ -23,9 +29,11 @@
         }
       }
     .heroimage{
+       
         height: 100%;
         width: 100%;
         object-fit: cover;
+        opacity: 0.5;
     }
     .info{
         bottom: 10%;
