--- a/react-netflix-frontend/src/index.scss
+++ b/react-netflix-frontend/src/index.scss
@@ -3,7 +3,16 @@
 * {
   font-family: "Poppins", sans-serif;
   // transition: all 1s;
- 
+}
+#modal {
+  .movieInfo {
+    .modalClose {
+      display: none;
+    }
+    .modalConten {
+      background: #181818;
+    }
+  }
 }
 
 body,
@@ -134,7 +143,7 @@ html {
   }
   overflow-x: hidden;
 }
-body{
+body {
   // &::-webkit-scrollbar {
   //   width: 5px !important;
   // }
@@ -161,7 +170,7 @@ code {
     monospace;
 }
 
-body{
+body {
   padding-right: 0 !important;
 }
 .btn {
@@ -205,7 +214,7 @@ ul {
   gap: 20px;
   margin: auto;
 }
-span{
+span {
   color: inherit !important;
   margin-left: 0 !important;
 }
