--- a/react-netflix-frontend/src/components/Details/style.scss
+++ b/react-netflix-frontend/src/components/Details/style.scss
@@ -120,6 +120,9 @@
     display: flex;
     align-items: flex-start;
     justify-content: space-between;
+    -webkit-box-shadow: 0px 0px 56px 0px rgba(0, 0, 0, 0.75);
+    -moz-box-shadow: 0px 0px 56px 0px rgba(0, 0, 0, 0.75);
+    box-shadow: 0px 0px 56px 0px rgba(0, 0, 0, 0.75);
     gap: 20px;
     .left {
       flex: 2.5;
@@ -180,6 +183,7 @@
       background-color: rgba(0, 0, 0, 0.445);
       .content {
         position: relative;
+        height: 610px;
         background: linear-gradient(
           to bottom,
           rgba(255, 255, 255, 0.537) 0%,
@@ -294,18 +298,25 @@
   display: flex;
   align-items: flex-start;
   justify-content: space-between;
+  -webkit-box-shadow: 0px 0px 150px 50px rgba(0, 0, 0);
+  -moz-box-shadow: 0px 0px 120px 50px rgba(0, 0, 0);
+  box-shadow: 0px 0px 120px 50px rgba(0, 0, 0);
+//   -webkit-box-shadow: -3px -50px 50px 12px rgba(0,0,0,1);
+// -moz-box-shadow: -3px -50px 50px 12px rgba(0,0,0,1);
+// box-shadow: -3px -50px 50px 12px rgba(0,0,0,1);
   background: linear-gradient(
     to bottom,
-    rgba(0, 0, 0, 0.05) 0%,
+    rgba(0, 0, 0, 0.74) 0%,
     rgb(0, 0, 0) 100%
   );
+  border-color: #000000de;
+  // background-color: #000000d6;
   padding: 10px 35px;
   //  padding-bottom: 10px;
   position: absolute;
-  bottom: 0;
+  bottom: 20px;
   gap: 20px;
   .left {
-  
     flex: 2.5;
     display: flex;
     align-items: flex-start;
@@ -327,8 +338,7 @@
   }
   .right {
     flex: 1.2;
-   
- 
+
     .cast,
     .genres {
       display: flex;
@@ -354,9 +364,11 @@
   }
 }
 
-.movieInfo{
-  .modalClose{display: none;}
-  .modalConten{
+.movieInfo {
+  .modalClose {
+    display: none;
+  }
+  .modalConten {
     background: #000;
   }
 }
