--- a/react-netflix-frontend/src/app.scss
+++ b/react-netflix-frontend/src/app.scss
@@ -1,5 +1,11 @@
 
-
+.app{
+  background-color: var(--maincolor);
+  width: 100%;
+  background-size: cover;
+  height: 100%;
+  
+}
 
 
 @media (prefers-reduced-motion: no-preference) {
