--- a/react-netflix-frontend/src/pages/search/style.scss
+++ b/react-netflix-frontend/src/pages/search/style.scss
@@ -3,4 +3,36 @@
     width: 100%;
     background-size: cover;
     height: 100%;
+    .wrapper{
+        padding: 100px 50px;
+        color: white;
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
+        gap: 20px;
+        .Keywords{
+            display: flex;
+            align-items: flex-start;
+            width: 100%;
+            gap: 10px;
+            h5{
+                font-size: 14px;
+                color: rgb(113, 113, 113);
+                flex: 0.45;
+            }
+            .itemsKey{
+                flex: 3;
+                ul{
+                    display: flex;
+                    flex-wrap: wrap;
+                    gap: 5px;
+                    justify-content: flex-start;
+                    font-size: 14px;
+                    color: rgb(185, 185, 185);
+                    text-transform: capitalize;
+                }
+            }
+        }
+    }
+   
 }
