--- a/react-netflix-frontend/src/components/CardItem/style.scss
+++ b/react-netflix-frontend/src/components/CardItem/style.scss
@@ -37,7 +37,7 @@
        // position: absolute;
        
       }
-    //  transition-delay: 1s;
+     transition-delay: 1s;
   
       img {
         height: 140px;
@@ -107,5 +107,84 @@
       align-items: center;
       gap: 5px;
       flex-wrap: wrap;
+    }
+  }
+
+
+  .CardItem{
+    img {
+      width: 100%;
+      height: 128px;
+      object-fit: cover;
+    }
+    &:hover {
+      width: 325px;
+      height: 300px;
+      position: absolute;
+      top: -100px;
+      -webkit-box-shadow: 0px 0px 15px 0px rgba(255, 255, 255, 0.07);
+      box-shadow: 0px 0px 15px 0px rgba(255, 255, 255, 0.07);
+      border-radius: 5px;
+      video {
+        width: 100%;
+        display: block;
+       // position: absolute;
+       
+      }
+     transition-delay: 1s;
+  
+      img {
+        height: 140px;
+        display: none;
+      }
+  
+      .itemInfo {
+        display: flex;
+        flex-direction: column;
+        padding: 5px;
+  
+        .icons {
+          display: flex;
+          margin-bottom: 10px;
+        //  z-index: 999;
+  
+        .MuiIconButton-root{
+          z-index: 10;
+       //  pointer-events: none;
+        }
+  
+          .icon {
+            border: 2px solid white;
+            padding: 5px;
+            border-radius: 50%;
+            margin-right: 10px;
+            font-size: 16px;
+          }
+        }
+        .itemInfoTop {
+          display: flex;
+          align-items: center;
+          margin-bottom: 10px;
+          font-size: 14px;
+          font-weight: 600;
+          color: gray;
+  
+          .limit {
+            border: 1px solid gray;
+            padding: 1px 3px;
+            margin: 0 10px;
+          }
+        }
+  
+        .desc {
+          font-size: 13px;
+          margin-bottom: 10px;
+        }
+  
+        .genre {
+          font-size: 14px;
+          color: lightgray;
+        }
+      }
     }
   }
