--- a/react-netflix-frontend/src/components/CardItemList/styles.scss
+++ b/react-netflix-frontend/src/components/CardItemList/styles.scss
@@ -1,19 +1,11 @@
 .movieList {
-    //   display: flex;
-    //   align-items: flex-start;
-    //   flex-direction: column;
-    //   gap: 10px;
+      display: flex;
+      align-items: flex-start;
+      flex-direction: column;
+      gap: 10px;
     margin: 20px 0;
     width: 100%;
-    .listTitle {
-      color: white !important;
-      font-size: 20px;
-      font-weight: 500;
-      margin-left: 50px !important;
-      //margin-bottom: 20px;
-      
-     // margin-bottom: 20px;
-    }
+    
     .listWrapper {
       position: relative;
       margin: 10px 0;
