--- a/react-netflix-frontend/src/components/Details/style.scss
+++ b/react-netflix-frontend/src/components/Details/style.scss
@@ -46,7 +46,16 @@
         img {
           height: 180px;
           object-fit: cover;
+          background-color: #000;
+          opacity: 0.7;
           width: 100%;
+        }
+        .text{
+          position: absolute;
+          /* top: 0; */
+          bottom: 15px;
+          padding: 10px;
+          font-size: 16px !important;
         }
       }
       .content {
@@ -60,6 +69,11 @@
           .left {
             .green {
               color: green;
+            }
+            .age,
+            .quality {
+              padding: 1px 5px;
+              border: 1px solid white;
             }
           }
           .right {
