--- a/react-netflix-frontend/src/pages/search/style.scss
+++ b/react-netflix-frontend/src/pages/search/style.scss
@@ -4,12 +4,12 @@
     background-size: cover;
     height: 100%;
     .wrapper{
-        padding: 100px 50px;
+        padding: 150px 50px;
         color: white;
         display: flex;
         flex-direction: column;
         align-items: flex-start;
-        gap: 20px;
+        gap: 30px;
         .Keywords{
             display: flex;
             align-items: flex-start;
@@ -30,6 +30,9 @@
                     font-size: 14px;
                     color: rgb(185, 185, 185);
                     text-transform: capitalize;
+                    li{
+                        cursor: pointer;
+                    }
                 }
             }
         }
