--- a/react-netflix-frontend/src/components/movieList/ListItem/MovieListItem/styles.scss
+++ b/react-netflix-frontend/src/components/movieList/ListItem/MovieListItem/styles.scss
@@ -6,14 +6,16 @@
   overflow: hidden;
   cursor: pointer;
   color: white;
+  transition: transform 0.5s ease-in-out, z-index 0.5s ease-in-out,
+    transform-origin 0.5s;
 
   img {
     width: 100%;
-    height: 100%;
+    height: 140px;
     object-fit: cover;
   }
 
-  video {
+  .react-player {
     width: 100%;
     height: 140px;
     display: none;
@@ -27,17 +29,18 @@
     width: 325px;
     height: 300px;
     position: absolute;
+    transform: translateY(-20px) scale(1.2); /* Move the card up and make it larger when hovered */
+    z-index: 1;
     top: -150px;
     -webkit-box-shadow: 0px 0px 15px 0px rgba(255, 255, 255, 0.07);
     box-shadow: 0px 0px 15px 0px rgba(255, 255, 255, 0.07);
     border-radius: 5px;
-    video {
-     // width: 100%;
+    .react-player {
+      // width: 100%;
       display: block;
-     // position: absolute;
-     
+      // position: absolute;
     }
-  //  transition-delay: 1s;
+    //  transition-delay: 1s;
 
     img {
       height: 140px;
@@ -47,16 +50,17 @@
       display: flex;
       flex-direction: column;
       padding: 5px;
-
+      // transition: opacity 0.3s ease-in-out, width 0.3s ease-in-out,
+      //   height 0.3s ease-in-out; /* Add width and height transitions */
       .icons {
         display: flex;
         margin-bottom: 10px;
-      //  z-index: 999;
+        //  z-index: 999;
 
-      .MuiIconButton-root{
-        z-index: 10;
-     //  pointer-events: none;
-      }
+        .MuiIconButton-root {
+          z-index: 10;
+          //  pointer-events: none;
+        }
 
         .icon {
           border: 2px solid white;
@@ -94,7 +98,7 @@
   }
 }
 
-.genres{
+.genres {
   display: flex;
   align-items: center;
   gap: 5px;
@@ -108,4 +112,26 @@
     gap: 5px;
     flex-wrap: wrap;
   }
+}
+.card {
+  width: 200px;
+  height: 200px;
+  background-color: #f0f0f0;
+  border: 1px solid #ccc;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  transition: transform 0.3s ease-in-out, z-index 0.3s ease-in-out,
+    transform-origin 0.3s;
+}
+
+.card-content {
+  text-align: center;
+  transition: opacity 0.3s ease-in-out;
+}
+
+.card.hovered {
+  transform: translateY(-20px) scale(1.2); /* Move the card up and make it larger when hovered */
+  z-index: 1; /* Increase the z-index when hovered to bring the card to the front */
 }
