--- a/react-netflix-frontend/src/pages/signup/style.scss
+++ b/react-netflix-frontend/src/pages/signup/style.scss
@@ -17,10 +17,9 @@
 //         color: white;
 //         position: absolute;
 //         top: 0;
-    
-       
+
 //         width: 100%;
-//         .top{   
+//         .top{
 //             display: flex;
 //             justify-content: space-between;
 //             padding: 50px 100px;
@@ -36,7 +35,7 @@
 //             gap: 10px;
 //             form{
 //                 display: flex;
-              
+
 //                 align-items: center;
 //                 border-color: #fff;
 //                 outline-color: #fff;
@@ -47,100 +46,115 @@
 //                    // width: 100%;
 //                 }
 //             }
-    
+
 //         }
 //     }
 
-    
 // }
 .register {
-    width: 100vw;
-    height: 100vh;
-    background: linear-gradient(
-        to bottom,
-        rgba(0, 0, 0, 0) 0%,
-        rgba(0, 0, 0, 1) 100%
-      ),
-      url("../../../public/assets/images/IN-en-20230306-popsignuptwoweeks-perspective_alpha_website_large.jpg");
-    background-size: cover;
+  width: 100vw;
+  height: 100vh;
+  background: linear-gradient(
+      to bottom,
+      rgba(0, 0, 0, 0) 0%,
+      rgba(0, 0, 0, 1) 100%
+    ),
+    url("../../../public/assets/images/IN-en-20230306-popsignuptwoweeks-perspective_alpha_website_large.jpg");
+  background-size: cover;
+  position: relative;
+
+  .top {
+    z-index: 101;
     position: relative;
-  
-    .top {
-        z-index: 101;
-        position: relative;
-      .wrapper {
-        padding: 20px 50px;
-        display: flex;
-        align-items: center;
-        justify-content: space-between;
-  
-        .logo {
-          height: 40px;
-        }
-  
-        .loginButton {
-          background-color: red;
-          border: none;
-          color: white;
-          border-radius: 5px;
-          padding: 5px 15px;
-          font-size: 16px;
-          font-weight: 500;
-          cursor: pointer;
-        }
-      }
-    }
-  
-    .container {
-      width: 100%;
-      height: 100%;
-      position: absolute;
-      top: 0;
-      left: 0;
+    .wrapper {
+      padding: 20px 50px;
       display: flex;
-      flex-direction: column;
       align-items: center;
-      justify-content: center;
-      color: white;
-  
-      h1 {
-        font-size: 50px;
+      justify-content: space-between;
+
+      .logo {
+        height: 40px;
       }
-  
-      h2 {
-        margin: 20px;
-      }
-  
-      p {
-        font-size: 20px;
-      }
-  
-      .input {
-        width: 50%;
-        background-color: white;
-        display: flex;
-        align-items: center;
-        justify-content: space-between;
-        margin-top: 20px;
-        height: 50px;
+
+      .loginButton {
+        background-color: #e50914;
+        border: none;
+        color: white;
         border-radius: 5px;
-  
-        input{
-            flex: 9;
-            height: 100%;
-            border: none;
-            padding: 0 10px;
-        }
-  
-        .registerButton{
-            flex: 3;
-            height: 100%;
-            background-color: red;
-            border: none;
-            color: white;
-            font-size: 22px;
-            cursor: pointer;
-        }
+        padding: 5px 15px;
+        font-size: 16px;
+        font-weight: 500;
+        cursor: pointer;
       }
     }
   }
+
+  .container {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    color: white;
+
+    h1 {
+      font-size: 50px;
+    }
+
+    h2 {
+      margin: 20px;
+    }
+
+    p {
+      font-size: 20px;
+    }
+
+    .input {
+      width: 50%;
+      background-color: white;
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      margin-top: 20px;
+      height: 50px;
+      border-radius: 5px;
+    
+
+      input {
+        flex: 1;
+        height: 100%;
+        border: none;
+        padding: 0 10px;
+        border-radius: 5px; 
+        &:focus-visible{
+          outline: none;
+          box-shadow: none;
+        }
+      }
+
+      .registerButton {
+        // flex: 3.5;
+        // height: 100%;
+        // background-color: red;
+        // border: none;
+        // color: white;
+        // font-size: 22px;
+        // cursor: pointer;
+        background-color: #e50914; /* Netflix red color */
+        color: #fff; /* White text color */
+        border: none;
+         padding: 10px 30PX;
+         text-align: center;
+        font-size: 1.2rem;
+        height: 100%;
+        border-radius: 4px;
+        cursor: pointer;
+        transition: background-color 0.3s ease-in-out;
+      }
+    }
+  }
+}
