--- a/react-netflix-frontend/src/index.css
+++ b/react-netflix-frontend/src/index.css
@@ -1,19 +1,27 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,400;0,500;0,700;0,900;1,400&display=swap");
 
+/* @import 'tailwindcss/base';
+@import 'tailwindcss/components';
+@import 'tailwindcss/utilities'; */
+
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 * {
   font-family: "Poppins", sans-serif;
-  // transition: all 1s;
+  /* transition: all 1s; */
 }
-#modal {
-  .movieInfo {
-    .modalClose {
-      display: none;
-    }
-    .modalConten {
-      background: #181818;
-    }
-  }
-}
+/* // #modal {
+//   .movieInfo {
+//     .modalClose {
+//       display: none;
+//     }
+//     .modalConten {
+//       background: #181818;
+//     }
+//   }
+// } */
 
 body,
 p,
@@ -143,28 +151,8 @@ html {
   }
   overflow-x: hidden;
 }
-body {
-  // &::-webkit-scrollbar {
-  //   width: 5px !important;
-  // }
 
-  // /* Track */
-  // &::-webkit-scrollbar-track {
-  //   box-shadow: inset 0 0 5px grey !important;
-  //   border-radius: 10px !important;
-  // }
-
-  // /* Handle */
-  // &::-webkit-scrollbar-thumb {
-  //   background: rgb(146, 146, 146) !important;
-  //   border-radius: 10px !important;
-  // }
-
-  // /* Handle on hover */
-  // &::-webkit-scrollbar-thumb:hover {
-  //   background: #b30000 !important;
-  // }
-}
+/*  */
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
